apps/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  hostnames:
    - radarr.larswenda.org
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
      timeouts:
        request: 300s
